div-container overflow error fixed and final commit!

--- a/challenge/frontend/src/App.css
+++ b/challenge/frontend/src/App.css
@@ -13,7 +13,6 @@ html, body, #root {
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
