--- a/challenge/frontend/src/styles/Dashboard.css
+++ b/challenge/frontend/src/styles/Dashboard.css
@@ -1,6 +1,5 @@
 .dashboard-container {
     padding: 40px;
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
   }
